--- a/dashboard.html
+++ b/dashboard.html
@@ -108,8 +108,8 @@
                             <h1 class="h2">Dashboard Overview</h1>
                             <div class="btn-toolbar mb-2 mb-md-0">
                                 <div class="btn-group me-2">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Print</button>
+                                    <button type="button" class="btn btn-outline-secondary">Export</button>
+                                    <button type="button" class="btn btn-outline-secondary">Print</button>
                                 </div>
                                 <button type="button" class="btn btn-primary btn-sm">
                                     <i class="bi bi-plus-circle me-1"></i>New Invoice
