--- a/features.html
+++ b/features.html
@@ -87,14 +87,11 @@
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#home" id="mobileHomeDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Home
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="mobileHomeDropdown">
-                            <li><a class="dropdown-item" href="index.html">Home 1</a></li>
-                            <li><a class="dropdown-item" href="home2.html">Home 2</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="home2.html">Home 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="features.html">Features</a>
@@ -345,7 +342,7 @@
                         <a href="#signup" class="btn btn-primary btn-lg">
                             <i class="bi bi-rocket-takeoff me-2"></i>Start Free Trial
                         </a>
-                        <a href="pricing.html" class="btn btn-outline-primary btn-lg">
+                        <a href="pricing.html" class="btn btn-outline-primary btn-lg" style="line-height: 35px;">
                             View Pricing
                         </a>
                     </div>
