--- a/home2.html
+++ b/home2.html
@@ -139,7 +139,7 @@
                             <a href="#signup" class="btn btn-primary btn-lg px-4">
                                 <i class="bi bi-lightning-charge me-2"></i>Get Started Free
                             </a>
-                            <a href="#demo" class="btn btn-outline-primary btn-lg px-4">
+                            <a href="#demo" class="btn btn-outline-primary btn-lg px-4" style="line-height: 35px;">
                                 <i class="bi bi-camera-video me-2"></i>Watch Demo
                             </a>
                         </div>
@@ -242,7 +242,7 @@
                                 <i class="bi bi-play-circle fs-1 text-white"></i>
                             </div>
                         </div>
-                        <div class="mt-3">
+                        <div class="mt-3 text-center">
                             <h5>Getting Started</h5>
                             <p class="text-muted">Learn the basics in 5 minutes</p>
                         </div>
@@ -256,7 +256,7 @@
                                 <i class="bi bi-play-circle fs-1 text-white"></i>
                             </div>
                         </div>
-                        <div class="mt-3">
+                        <div class="mt-3 text-center">
                             <h5>Advanced Features</h5>
                             <p class="text-muted">Unlock powerful capabilities</p>
                         </div>
@@ -271,8 +271,8 @@
                             </div>
                         </div>
                         <div class="mt-3">
-                            <h5>Tips & Tricks</h5>
-                            <p class="text-muted">Work smarter, not harder</p>
+                            <h5 class="text-center">Tips & Tricks</h5>
+                            <p class="text-muted text-center">Master productivity shortcuts</p>
                         </div>
                     </div>
                 </div>
