--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 Home
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="homeDropdown">
-                                <li><a class="dropdown-item" href="index.html">Home 1</a></li>
+                                <li><a class="dropdown-item active" href="index.html">Home 1</a></li>
                                 <li><a class="dropdown-item" href="home2.html">Home 2</a></li>
                             </ul>
                         </li>
@@ -87,14 +87,11 @@
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#home" id="mobileHomeDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Home
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="mobileHomeDropdown">
-                            <li><a class="dropdown-item" href="index.html">Home 1</a></li>
-                            <li><a class="dropdown-item" href="home2.html">Home 2</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="home2.html">Home 2</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="features.html">Features</a>
@@ -139,7 +136,7 @@
                             <a href="#signup" class="btn btn-primary btn-lg px-4">
                                 <i class="bi bi-rocket-takeoff me-2"></i>Start Free Trial
                             </a>
-                            <a href="#demo" class="btn btn-outline-light btn-lg px-4">
+                            <a href="#demo" class="btn btn-outline-light btn-lg px-4" style="line-height: 35px;">
                                 <i class="bi bi-play-circle me-2"></i>Watch Demo
                             </a>
                         </div>
