--- a/solutions.html
+++ b/solutions.html
@@ -284,7 +284,7 @@
                         </div>
                     </div>
                     
-                    <div class="use-case-item">
+                    <div class="use-case-item mt-4">
                         <div class="use-case-header">
                             <h4><i class="bi bi-tools text-primary me-2"></i>Service Providers</h4>
                         </div>
@@ -310,7 +310,7 @@
                         </div>
                     </div>
                     
-                    <div class="use-case-item">
+                    <div class="use-case-item mt-4">
                         <div class="use-case-header">
                             <h4><i class="bi bi-heart-pulse text-primary me-2"></i>Healthcare Providers</h4>
                         </div>
@@ -374,7 +374,7 @@
                         <a href="#signup" class="btn btn-primary btn-lg">
                             <i class="bi bi-rocket-takeoff me-2"></i>Start Free Trial
                         </a>
-                        <a href="contact.html" class="btn btn-outline-primary btn-lg">
+                        <a href="contact.html" class="btn btn-outline-primary btn-lg" style="line-height: 35px;">
                             Talk to Expert
                         </a>
                     </div>
