--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <title>Sign Up - InvoicePro | Smart Invoice & Billing Management</title>
 
     <!-- Bootstrap 5 CSS -->
