--- a/dashboard.html
+++ b/dashboard.html
@@ -108,7 +108,28 @@
                         <i class="bi bi-graph-up me-2"></i>Reports
                     </a>
                 </li>
-            </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">
+                        <i class="bi bi-person-circle me-2"></i>Profile
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">
+                        <i class="bi bi-gear me-2"></i>Settings
+                    </a>
+                </li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="index.html"><i
+                                                class="bi bi-person me-2"></i>Profile</a></li>
+                                    <li><a class="dropdown-item" href="index.html"><i
+                                                class="bi bi-gear me-2"></i>Settings</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="index.html"><i
+                                                class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
         </div>
     </div>
 
@@ -155,7 +176,7 @@
                 </nav>
 
                 <!-- Main Content -->
-                <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" style="width: 100%; max-width: 100%; flex: 1;">
                     <!-- Overview Section -->
                     <div id="overview" class="content-section">
                         <!-- Page Header -->
