--- a/home2.html
+++ b/home2.html
@@ -28,11 +28,6 @@
                     <span class="brand-text">InvoicePro</span>
                 </a>
 
-                <!-- Mobile Toggle Button -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
                 <!-- Desktop Menu -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
@@ -43,7 +38,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="homeDropdown">
                                 <li><a class="dropdown-item" href="index.html">Home 1</a></li>
-                                <li><a class="dropdown-item active" href="home2.html">Home 2</a></li>
+                                <li><a class="dropdown-item" href="home2.html">Home 2</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -76,6 +71,19 @@
                         <!-- Auth Buttons -->
                         <a href="signup.html" class="btn btn-outline-primary">Sign Up</a>
                     </div>
+                </div>
+
+                <!-- Mobile & Theme Toggle Buttons -->
+                <div class="d-flex align-items-center gap-2">
+                    <!-- Theme Toggle (Tablet & Mobile Only) -->
+                    <button class="btn btn-link theme-toggle-mobile d-none d-lg-block" id="themeToggleMobile">
+                        <i class="bi bi-sun-fill fs-5"></i>
+                    </button>
+                    
+                    <!-- Mobile Toggle Button -->
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                 </div>
             </div>
         </nav>
@@ -366,14 +374,14 @@
                     <div class="industry-card text-center p-4 bg-white rounded shadow-sm h-100">
                         <i class="bi bi-heart-pulse fs-1 text-danger mb-3"></i>
                         <h5>Healthcare</h5>
-                        <p class="text-muted">HIPAA-compliant billing solutions</p>
+                        <p class="text-muted">HIPAA-compliant billing<br>solutions for medical practices</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6" data-aos="flip-left" data-aos-delay="400">
                     <div class="industry-card text-center p-4 bg-white rounded shadow-sm h-100">
                         <i class="bi bi-shop fs-1 text-warning mb-3"></i>
                         <h5>Retail</h5>
-                        <p class="text-muted">Streamline retail invoicing</p>
+                        <p class="text-muted">Streamline retail invoicing<br>and sales management</p>
                     </div>
                 </div>
             </div>
