--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
 
 <body class="auth-page">
     <!-- Theme Toggle Button -->
-    <div class="theme-toggle-auth">
+    <div class="theme-toggle-auth" style="position: fixed; top: 20px; right: 30px; z-index: 1000;">
         <button class="btn btn-outline-light btn-sm" id="themeToggle">
             <i class="bi bi-sun-fill" id="themeIcon"></i>
         </button>
