--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="col-lg-6" data-aos="fade-right">
                     <div class="hero-content">
                         <h1 class="display-3 fw-bold mb-4">
-                            Smart Invoice & <span class="text-primary">Billing Management</span>
+                            Smart Invoice & <span style="color:#ffffff">Billing Management</span>
                         </h1>
                         <p class="lead mb-4">
                             Manage invoices, clients, payments & reports easily. Professional billing solution for
