--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                         <h1 class="display-3 fw-bold mb-4">
                             Smart Invoice & <span style="color:#ffffff">Billing Management</span>
                         </h1>
-                        <p class="lead mb-4">
-                            Manage invoices, clients, payments & reports easily. Professional billing solution for
+                        <p class="lead mb-4" style="color: rgba(255, 255, 255, 0.9);">
+                            Manage invoices, clients, payments &amp; reports easily. Professional billing solution for
                             modern businesses.
                         </p>
                         <div class="d-flex flex-wrap gap-3 mb-4">
