--- a/signup.html
+++ b/signup.html
@@ -46,36 +46,19 @@
 
                     <!-- Sign Up Form -->
                     <form id="signupForm">
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <input type="text" class="form-control" id="firstName" placeholder="First Name"
-                                    required>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <input type="text" class="form-control" id="lastName" placeholder="Last Name" required>
-                            </div>
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="Name" placeholder="Enter Your Name" required>
                         </div>
 
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <input type="email" class="form-control" id="email" placeholder="Email Address"
-                                    required>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <input type="tel" class="form-control" id="phone" placeholder="Mobile Number">
-                            </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" id="email" placeholder="Email Address" required>
                         </div>
 
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <input type="password" class="form-control" id="password" placeholder="Password"
-                                    required>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <input type="password" class="form-control" id="confirmPassword"
-                                    placeholder="Confirm Password" required>
-                            </div>
+                        <div class="mb-3">
+                            <input type="password" class="form-control" id="password" placeholder="Password" required>
                         </div>
+
+
 
                         <div class="mb-3">
                             <div class="form-check">
