--- a/home2.html
+++ b/home2.html
@@ -79,9 +79,10 @@
                     <button class="btn btn-link theme-toggle-mobile d-none d-lg-block" id="themeToggleMobile">
                         <i class="bi bi-sun-fill fs-5"></i>
                     </button>
-                    
+
                     <!-- Mobile Toggle Button -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#mobileMenu">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
@@ -147,7 +148,7 @@
                             Experience the future of invoice management with AI-powered automation, real-time analytics,
                             and seamless integrations.
                         </p>
-                        <div class="d-flex flex-wrap gap-3 mb-4 justify-content-center">
+                        <div class="d-flex flex-wrap gap-3 mb-4 ">
                             <a href="#signup" class="btn btn-primary btn-lg px-4">
                                 <i class="bi bi-lightning-charge me-2"></i>Get Started Free
                             </a>
