--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                             <input type="password" class="form-control" id="password" placeholder="Password" required>
                         </div>
 
-                        <div class="d-flex justify-content-between align-items-center mb-3">
+                        <div class="d-flex justify-content-between align-items-center flex-wrap gap-2 mb-3">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="remember">
                                 <label class="form-check-label" for="remember">
