--- a/solutions.html
+++ b/solutions.html
@@ -79,9 +79,10 @@
                     <button class="btn btn-link theme-toggle-mobile d-none d-lg-block" id="themeToggleMobile">
                         <i class="bi bi-sun-fill fs-5"></i>
                     </button>
-                    
+
                     <!-- Mobile Toggle Button -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#mobileMenu">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
@@ -142,14 +143,7 @@
                     <h1 class="display-3 fw-bold mb-4">Solutions for Every Business</h1>
                     <p class="lead mb-4">Tailored invoicing and billing solutions designed to meet the unique needs of
                         your industry</p>
-                    <div class="breadcrumb justify-content-center">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                <li class="breadcrumb-item active">Solutions</li>
-                            </ol>
-                        </nav>
-                    </div>
+
                 </div>
             </div>
         </div>
